--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,14 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: steam_bi_postgres
-    #restart: unless-stopped
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-steam_bi}
-      POSTGRES_USER: ${POSTGRES_USER:-steam_bi_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-steam_bi_user}
-      #TZ: ${TZ:-UTC}
-    #volumes:
-    #  - postgres_data:/var/lib/postgresql/data
+      POSTGRES_DB: steam_bi
+      POSTGRES_USER: steam_bi_user
+      POSTGRES_PASSWORD: steam_bi_user
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U steam_bi_user -d steam_bi"]
       interval: 10s
       timeout: 5s
       retries: 5
-
-#volumes:
-#  postgres_data:
